<resources>
    <string name="app_name">Delta Exchange</string>
    <string name="title_order">Order</string>
    <string name="title_chart">Chart</string>
    <string name="title_notifications">Notifications</string>
    <string name="order_books_title">📚 Order Books</string>
    <string name="price">"Price"</string>
    <string name="size">"Size"</string>


    <string name="unrounded_usd_chart_price_format">&#36; %1$s</string>
    <string name="settings">Settings</string>
    <string name="taker">Taker</string>
    <string name="create_order">Create Order</string>
    <string name="confirm">Confirm</string>
    <string name="limit">Limit</string>
    <string name="market">Market</string>
    <string name="place_order">Place Order</string>
    <string name="limit_price">Limit Price</string>
    <string name="Quantity">Quantity</string>
    <string name="buy_long">Buy | Long</string>>
    <string name="sell_short">Sell | Short</string>
    <string name="leverage">Leverage</string>
    <string name="post_only">Post Only</string>
    <string name="reduce_only">Reduce Only</string>
    <string name="gtc">GTC</string>
    <string name="fok">FOK</string>
    <string name="ioc">IOC</string>
    <string name="tif">TIF</string>
    <string name="_1x">1x</string>
    <string name="please_wait">Please wait</string>
    <string name="api_key_preference">api_key_preference</string>
    <string name="api_secret_preference">api_secret_preference</string>
    <string name="api_key">API Key</string>
    <string name="api_secret">API Secret</string>>
    <string name="something_wrong">Something went wrong!! Try again later</string>
    <string name="active_network_connection_required">An active network connection is required!!</string>
    <string name="server_not_responding">Server not responding!! Try again later</string>
    <string name="connection_timeout">Connection timeout!! Try again later</string>
    <string name="quantity_is_empty">Quantity is empty</string>
    <string name="limit_price_is_empty">Limit price is empty</string>
    <string name="limit_price_is_zero">Limit price can\'t be zero</string>
    <string name="stop_price_is_empty">Stop price is empty</string>
    <string name="stop_price_is_zero">Stop price can\'t be zero</string>
    <string name="trailing_amount_is_empty">Trailing amount is empty</string>
    <string name="trailing_amount_is_zero">Trailing amount can\'t be zero</string>
    <string name="quantity_is_zero">Quantity can\'t be zero</string>
    <string name="configure_api_key_first">Configure API key first</string>
    <string name="post_only_flag_is_for_gtc">Post only flag is for GTC</string>
    <string name="title_home">Home</string>
    <string name="crypto">Crypto</string>
    <string name="derivatives">Derivatives</string>
    <string name="exchange">Exchange</string>
    <string name="futures">Futures</string>
    <string name="move">Move</string>
    <string name="interest_rate_swaps">Interest Rate Swaps</string>
    <string name="btc_settled">BTC Settled</string>
    <string name="usdt_settled">USDT Settled</string>
    <string name="test_net_server_preference">test_net_server_preference</string>
    <string name="please_wait_restarting">Please wait restarting</string>
    <string name="position">Position</string>
    <string name="open_orders">Open Orders</string>
    <string name="contract">Contract</string>
    <string name="filled_left">Filled/Left</string>
    <string name="value">Value</string>
    <string name="type">Type</string>
    <string name="entry_price">Entry Price</string>
    <string name="liq_price">Liq. Price</string>
    <string name="margin">Margin</string>
    <string name="api_details">API Details</string>
    <string name="test_net_server">Test Net Server</string>
    <string name="last_price">Last Price:</string>
    <string name="fiveMin">5m</string>
    <string name="fifteenMins">15m</string>
    <string name="thirtyMins">30m</string>
    <string name="oneHour">1h</string>
    <string name="fourHours">4h</string>
    <string name="sixHours">6h</string>
    <string name="oneDay">1d</string>
    <string name="oneWeek">1w</string>
    <string name="oneMonth">1Mon</string>
    <string name="chart_resolution_preference">chart_resolution_preference</string>
    <string name="product_id_preference">product_id_preference</string>
    <string name="product_symbol_preference">product_symbol_preference</string>
    <string name="order_placed_successfully">Order placed successfully</string>
    <string name="order_leverage_changed_successfully">Order leverage changed successfully</string>
    <string name="order_leverage_updated">Order leverage updated</string>
    <string name="api_details_error">Check your API details</string>
    <string name="volumeTxt">Volume</string>
    <string name="order_book">Order Book</string>
    <string name="recent_trade">Recent Trade</string>
    <string name="title_account">Account</string>
    <string name="coin">coin</string>
    <string name="position_margin">Position M.</string>
    <string name="balance">balance</string>
    <string name="order_margin">Order M.</string>
    <string name="available_balance">Avail. Balance</string>
    <string name="title_wallet">Wallet</string>
    <string name="stop_price">Stop Price</string>
    <string name="trailing_amount">Trailing Amount</string>
    <string name="version">"Version:  "</string>
    <string name="x">X</string>
    <string name="order_cancelled_successfully">Order cancelled successfully!!</string>
    <string name="stop_orders">Stop Orders</string>
    <string name="show_advanced_order_form">Show advanced order form</string>
    <string name="current_leverage">Current Leverage : </string>
    <string name="price_is_zero">Price can\'t be zero</string>
    <string name="price_is_empty">Price is empty</string>
    <string name="product_symbols_list_preference">product_symbols_list_preference</string>
    <string name="mark_price">Mark Price</string>
</resources>
