<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/home"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/title_home" />
    <item
        android:id="@+id/chart"
        android:icon="@drawable/ic_timeline_black_24dp"
        android:title="@string/title_chart" />
    <item
        android:id="@+id/order"
        android:icon="@drawable/ic_order"
        android:title="" />
    <item
        android:id="@+id/wallet"
        android:icon="@drawable/ic_baseline_account_balance_wallet_24"
        android:title="@string/title_wallet" />
    <item
        android:id="@+id/settings"
        android:icon="@drawable/ic_baseline_settings_24"
        android:title="@string/settings"/>

</menu>
