<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:orientation="vertical">

    <RadioGroup
        android:id="@+id/orderTypeRadioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:checkedButton="@+id/checkedLimit"
        android:orientation="horizontal"
        android:weightSum="2">

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/checkedLimit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/limit"
            android:textColor="@color/primaryTextColor"
            android:textSize="20sp" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/checkedMarket"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/market"
            android:textColor="@color/primaryTextColor"
            android:textSize="20sp" />
    </RadioGroup>

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/buyAndSellSwitch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="2dp"
        android:checked="false"
        android:gravity="center"
        android:text="@string/buy_long"
        android:textColor="@color/colorBid"
        android:textSize="20sp"
        android:textStyle="bold"
        android:thumb="@drawable/thumb_selector"
        app:track="@drawable/track_selector" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/limitPriceTextInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="2dp"
        android:gravity="center"
        android:hint="@string/limit_price"
        android:textColorHint="@color/primaryTextColor"
        app:hintTextColor="@color/primaryTextColor">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtLimitPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:textColor="@color/primaryTextColor"
            android:textColorHint="@color/primaryTextColor"
            android:textCursorDrawable="@null" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="2dp"
        android:gravity="center"
        android:hint="@string/Quantity"
        android:textColorHint="@color/primaryTextColor"
        app:hintTextColor="@color/primaryTextColor">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtQuantity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:textColor="@color/primaryTextColor"
            android:textColorHint="@color/primaryTextColor"
            android:textCursorDrawable="@null" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:orientation="horizontal"
        android:weightSum="2">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:minHeight="?android:attr/actionBarSize"
            android:text="@string/leverage"
            android:textColor="#5d7694"
            android:textSize="25sp" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/leverageTxt"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_weight="1"
            android:minHeight="?android:attr/actionBarSize"
            android:text="@string/_1x"
            android:textColor="@color/primaryTextColor"
            android:textSize="25sp" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <com.warkiz.tickseekbar.TickSeekBar
        android:id="@+id/leverageSeeker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:tsb_show_tick_marks_type="oval"
        app:tsb_show_tick_texts="above"
        app:tsb_thumb_color="@color/colorAccent"
        app:tsb_thumb_size="16dp"
        app:tsb_tick_marks_color="@color/colorAccent"
        app:tsb_tick_marks_size="8dp"
        app:tsb_tick_texts_array="@array/leverage_range"
        app:tsb_tick_texts_color="@color/primaryTextColor"
        app:tsb_tick_texts_size="13sp"
        app:tsb_ticks_count="8"
        app:tsb_track_background_color="@color/bottomNavSelected"
        app:tsb_track_background_size="2dp"
        app:tsb_track_progress_color="@color/primaryTextColor"
        app:tsb_track_progress_size="3dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnPlaceOrder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:backgroundTint="@color/colorBid"
        android:minHeight="?android:attr/actionBarSize"
        android:text="@string/place_order" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:orientation="horizontal"
        android:weightSum="2">

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/checkPostOnly"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/post_only"
            android:textColor="@color/primaryTextColor" />

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/checkReduceOnly"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/reduce_only"
            android:textColor="@color/primaryTextColor" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/tifLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:orientation="horizontal"
        android:weightSum="2">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight=".5"
            android:gravity="center"
            android:text="@string/tif"
            android:textColor="@color/primaryTextColor"
            android:textSize="18sp"
            android:textStyle="bold" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1.5"
            android:checkedButton="@+id/checkedGTC"
            android:orientation="horizontal"
            android:weightSum="3">

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/checkedGTC"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/gtc"
                android:textColor="@color/primaryTextColor"
                android:textSize="20sp" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/checkedFOK"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/fok"
                android:textColor="@color/primaryTextColor"
                android:textSize="20sp" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/checkedIOC"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/ioc"
                android:textColor="@color/primaryTextColor"
                android:textSize="20sp" />
        </RadioGroup>
    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.appcompat.widget.LinearLayoutCompat>