<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    android:layout_marginBottom="?attr/actionBarSize"
    android:orientation="vertical"
    android:weightSum="10">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical"
        android:weightSum="2">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:gravity="center"
                android:text="@string/crypto"
                android:textColor="@color/primaryTextColor"
                android:textSize="25sp"
                android:textStyle="bold" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:gravity="center"
                android:text="@string/derivatives"
                android:textColor="@color/colorAccent"
                android:textSize="25sp"
                android:textStyle="bold" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/exchange"
            android:textColor="@color/primaryTextColor"
            android:textSize="20sp" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/productType"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".7"
        app:tabBackground="@color/colorPrimaryAlternate"
        app:tabGravity="fill"
        app:tabIndicatorColor="@color/colorAccent"
        app:tabMode="fixed"
        app:tabTextColor="@color/primaryTextColor">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/futures"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/futures" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/move"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/move" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/interestRateSwipes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/interest_rate_swipes" />
    </com.google.android.material.tabs.TabLayout>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/futuresSettled"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight=".5"
        android:layout_gravity="center"
        app:tabBackground="@color/colorPrimaryAlternate"
        app:tabGravity="fill"
        app:tabIndicatorColor="@color/colorAccent"
        app:tabMode="fixed"
        app:tabTextColor="@color/primaryTextColor">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/btcSettled"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btc_settled" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/usdtSettled"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/usdt_settled" />
    </com.google.android.material.tabs.TabLayout>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipeLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="7.8">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/homeRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
</androidx.appcompat.widget.LinearLayoutCompat>