<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/backgroundColor"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.order.OpenOrdersFragment">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".5"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:weightSum="5">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="@color/primaryTextColor"
                android:text="@string/contract"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".7"
                android:gravity="center"
                android:textColor="@color/primaryTextColor"
                android:textStyle="bold"
                android:text="@string/Quantity" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="@color/primaryTextColor"
                android:textStyle="bold"
                android:text="@string/filled_left" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.3"
                android:gravity="center"
                android:textColor="@color/primaryTextColor"
                android:textStyle="bold"
                android:text="@string/value" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="@color/primaryTextColor"
                android:textStyle="bold"
                android:text="@string/type" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/swipeLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="9">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/openOrdersRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="9"/>
        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
    </androidx.appcompat.widget.LinearLayoutCompat>

    <ProgressBar
        android:id="@+id/chartProgressSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="8dp"
        android:indeterminate="true" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>
