<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight=".5"
            android:orientation="horizontal"
            android:weightSum="4.5">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/coin"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".5"
                android:gravity="center"
                android:text="@string/coin"
                android:textAllCaps="true"
                android:textColor="@color/primaryTextColor"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/walletBalance"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/balance"
                android:textAllCaps="true"
                android:textColor="@color/primaryTextColor"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/positionMargin"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/position_margin"
                android:textAllCaps="true"
                android:textColor="@color/primaryTextColor"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/orderMargin"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/order_margin"
                android:textAllCaps="true"
                android:textColor="@color/primaryTextColor"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/availableBalance"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/available_balance"
                android:textAllCaps="true"
                android:textColor="@color/primaryTextColor"
                android:textStyle="bold" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/walletRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="9" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <crypto.delta.exchange.openexchange.utils.BlinkingLoader
        android:id="@+id/progressSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="8dp"
        android:indeterminate="true"
        app:auto_start="true"
        app:dot_blinkingColor="@color/colorBid"
        app:dot_margin="3dp"
        app:dot_neutralColor="@color/primaryTextColor"
        app:dot_num_dots="5" />

    <ImageView
        android:id="@+id/errorImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:src="@drawable/error"
        android:visibility="gone" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>